--- a/CareDirection/CareDirection/Resources/Storyboard/Symptom.storyboard
+++ b/CareDirection/CareDirection/Resources/Storyboard/Symptom.storyboard
@@ -82,8 +82,8 @@
                                                     <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BVe-ju-b2V">
-                                                    <rect key="frame" x="0.0" y="30" width="101" height="3"/>
+                                                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BVe-ju-b2V">
+                                                    <rect key="frame" x="1" y="30" width="101" height="3"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="101" id="dyU-3V-8df"/>
@@ -184,6 +184,9 @@
                                 <state key="normal" title="제품 보러가기">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="goToProduct:" destination="ar5-rf-L4M" eventType="touchUpInside" id="Z0Y-V0-5VZ"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
