[UPDATE] product communication

--- a/CareDirection/CareDirection/Resources/Storyboard/Product.storyboard
+++ b/CareDirection/CareDirection/Resources/Storyboard/Product.storyboard
@@ -1259,7 +1259,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IFl-w6-NfD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2159.1999999999998" y="10.344827586206897"/>
+            <point key="canvasLocation" x="-2159" y="18"/>
         </scene>
         <!--Filter Pop UpVC-->
         <scene sceneID="jI8-Ao-DfP">
